TestRepo2/src/objects/Goal_Product_Link__c.object
<CustomObject>
    <fields>
        <fullName>CT_Loaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CT Loaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dave_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dave Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duplication_Key__c</fullName>
        <formula>Goal__c + &apos;|&apos; + Product_Classification__c + &apos;|&apos; + Product_Group__c + &apos;|&apos; + Generic_Brand__c + &apos;|&apos; + Sub_Brand__c + &apos;|&apos; + Individual_Brand__c + &apos;|&apos; + Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duplication Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic_Brand__c</fullName>
        <label>Generic Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <label>Goal</label>
        <referenceTo>Goal__c</referenceTo>
        <relationshipName>Goal_Product_Links</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ind_Brand_Size__c</fullName>
        <formula>Individual_Brand__c + &apos;, &apos; + Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ind. Brand / Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Brand__c</fullName>
        <label>Individual Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_Key__c</fullName>
        <formula>Product_Classification__c + &apos;|&apos; + Product_Group__c + &apos;|&apos; + Generic_Brand__c + &apos;|&apos; + Sub_Brand__c + &apos;|&apos; + Individual_Brand__c + &apos;|&apos; + Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Match Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Org_ID__c</fullName>
        <label>New Org ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Org__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Org</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Classification__c</fullName>
        <label>Product Classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Brand__c</fullName>
        <label>Report Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Brand__c</fullName>
        <label>Sub Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Goal Brand</label>
    <nameField>
        <displayFormat>GPL-{0000000000}</displayFormat>
        <label>Brand ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Goal Brands</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>